# napari-bruce

./: .gitignore  README.md  napari-bruce_windows_wsl2.yml  pyproject.toml
env/: bruce-env_macos_arm.yml  bruce-env_windows_native.yml  napari-bruce.yml  napari-bruce_apple_silicon.yml  napari-bruce_windows_native.yml
src/napari_bruce/: cli.py  config.json  configuration.py  helper_functions.py  main.py  napari.yaml  workflow.py
src/napari_bruce/stardist_models/stardist_psyn/logs/train/: events.out.tfevents.1761568569.LIN-RWM005.1274739.4.v2
src/napari_bruce/stardist_models/stardist_psyn/logs/validation/: events.out.tfevents.1761568576.LIN-RWM005.1274739.5.v2
src/napari_bruce/stardist_models/stardist_th/logs/train/: events.out.tfevents.1761567655.LIN-RWM005.1274739.1.v2
src/napari_bruce/stardist_models/stardist_th/logs/validation/: events.out.tfevents.1761567663.LIN-RWM005.1274739.2.v2
