[project]
name = "napari-bruce"
version = "0.0.1"
requires-python = ">=3.10,<3.11"
classifiers = [
    "Framework :: napari",
]
dependencies = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"napari_bruce" = [
    "*.yaml",
    "bf/bioformats_package.jar",
    "stardist_models/**/*",
]

[project.entry-points."napari.manifest"]
napari-bruce = "napari_bruce:napari.yaml"

[project.scripts]
bruce = "napari_bruce.cli:main"