[project]
name = "napari-bruce"
version = "0.0.1"
description = "A napari plugin for PALM image analysis"
readme = "README.md"
requires-python = ">=3.9"
classifiers = ["Framework :: napari"]
license = { text = "MIT" }
authors = [{ name = "Benjamin Vallin", email = "ben.vallin@gmail.com" }]
dependencies = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"napari_bruce" = [
    "*.yaml",
    "bioformats/bioformats_package.jar",
    "stardist_models/**/*",
]

[project.entry-points."napari.manifest"]
napari-bruce = "napari_bruce:napari.yaml"

[project.scripts]
bruce = "napari_bruce.cli:main"







